src/test/ui/impl-trait/bindings-opaque.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bindings-opaque.rs:1:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error[E0599]: no method named `count_ones` found for opaque type `impl Copy` in the current scope
  --> $DIR/bindings-opaque.rs:11:17
   |
LL |     let _ = FOO.count_ones();
   |                 ^^^^^^^^^^ method not found in `impl Copy`

error[E0599]: no method named `count_ones` found for opaque type `impl Copy` in the current scope
  --> $DIR/bindings-opaque.rs:13:17
   |
LL |     let _ = BAR.count_ones();
   |                 ^^^^^^^^^^ method not found in `impl Copy`

error[E0599]: no method named `count_ones` found for opaque type `impl Copy` in the current scope
  --> $DIR/bindings-opaque.rs:15:17
   |
LL |     let _ = foo.count_ones();
   |                 ^^^^^^^^^^ method not found in `impl Copy`

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0599`.
